tablegen/tests/snapshots/snapshot_codegen__many_states_node_types.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 977
expression: json
---
[
  {
    "type": "nt_a",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  },
  {
    "type": "nt_b",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  },
  {
    "type": "nt_c",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  },
  {
    "type": "nt_d",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  },
  {
    "type": "start",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  }
]
