tablegen/tests/snapshots/snapshot_codegen__many_states_symbol_metadata.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 990
expression: formatted
---
[0] 0b00000011
[1] 0b00000011
[2] 0b00000011
[3] 0b00000011
[4] 0b00000011
[5] 0b00000011
[6] 0b00000011
[7] 0b00000011
[8] 0b00000011
[9] 0b00000011
[10] 0b00000011
