tablegen/tests/snapshots/snapshot_codegen__primary_state_ids_minimal.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 1151
expression: output
---
PRIMARY_STATE_IDS = &[TSStateId (0usize as u16) , TSStateId (1usize as u16) , TSStateId (2usize as u16)]
